app/assets/stylesheets/modules/record-side-nav.css.scss
.record-side-nav {
  background-color: transparent;
  list-style-type: none;
  padding: 0;
  position: fixed;
  right: 0;
  top: 50%;
  z-index: 1040;

  li {
    border-right: 1px solid $sul-record-side-nav-border-color;
    border-left: 1px solid $sul-record-side-nav-border-color;
    border-bottom: 1px solid $sul-record-side-nav-border-color;

    button {
      background-color: $sul-record-side-nav-background-color;
      border: none;
      height: 35px;
      overflow: auto;
      padding: 0;
      text-align: right;
      width: 100%;

      .nav-label {
        padding: 0 0 0 10px;
        display: none;
      }

      i.fa, .sul-icon {
        display: inline-block;
        text-align: center;
        width: 35px;
      }
    }

    button.active {
      background-color: $sul-record-side-nav-active-btn-bg;
      -webkit-box-shadow: inset 0 0 10px $sul-record-side-nav-active-btn-shadow;
      -moz-box-shadow: inset 0 0 10px $sul-record-side-nav-active-btn-shadow;
      box-shadow: inset 0 0 10px $sul-record-side-nav-active-btn-shadow;
    }

    &:last-child, &:last-child button {
      border-bottom-right-radius: 5px;
      border-bottom-left-radius: 5px;
    }

    &:first-child, &:first-child button {
      border-top-right-radius: 5px;
      border-top-left-radius: 5px;
    }

    &:first-child {
      border-top: 1px solid $sul-record-side-nav-border-color;
    }
  }
}

@media screen and (max-width: $screen-xs-max) {
  .record-side-nav {
    li {
      &:first-child {
        border-top-right-radius: 0px;
      }

      &:last-child {
        border-bottom-right-radius: 0px;
      }
    }
  }
}

